added a readme and fixed the styling and fonts

--- a/themes/cca-general/static/fonts/proxima_nova/ProximaNova-Bold/font.css
+++ b/themes/cca-general/static/fonts/proxima_nova/ProximaNova-Bold/font.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Proxima Nova';
+  font-family: 'Proxima-Nova';
   src: local('ProximaNova-Bold'),
        url('ProximaNova-Bold.woff2') format('woff2'),
        url('ProximaNova-Bold.woff') format('woff'),
