--- a/themes/cca-general/static-src/less/style.less
+++ b/themes/cca-general/static-src/less/style.less
@@ -59,9 +59,6 @@ li {
     font-family: "Proxima-Nova", sans-serif;
 }
 
-/* #homepage .card-section {
-    padding: 100px 0;
-} */
 
 /* NAVBAR */
 #navbar {
@@ -324,14 +321,15 @@ li {
     font-family: "Proxima-Nova", sans-serif;
     position: relative;
     z-index: 100;
+    /* margin-top: 100px; */
 }
 
-#homepage .first-card .complex-clouds {
+/* #homepage .first-card .complex-clouds {
     overflow: hidden;
-}
+} */
 
 #homepage .first-card h3 {
-    padding-top: 130px;
+    padding-top: 230px;
 }
 
 #homepage .first-card h4 {
@@ -345,20 +343,40 @@ li {
 #homepage .first-card.fixed .complex-clouds {
     position: fixed;
     top: 100px;
-    left: 15px;
+    left: 0;
+    height: 570px;
 
+    /* Removing left/right margin from Bootstrap  */
     width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
-#homepage .second-card.fixed .title-row-secondcard {
-    position: fixed;
-    top: 100px;
-    left: 15px;
-
-    width: 100%;
+#homepage .first-card .complex-clouds {
+    position: relative;
+    height: 570px;
+    /* min-width: 1120px; */
 }
 
-/*MOBILE FIRST CARD*/
+#homepage .first-card .img-triangle {
+    position: absolute;
+    top: 70px;
+    right: 120px;
+
+    width: 510px;
+    height: 453px;
+}
+
+/* MEDIUM FIRST CARD */
+@media screen and (max-width : 1024px) {
+    #homepage .first-card .img-triangle {
+        position: absolute;
+        top: 70px;
+        right: -88px;
+    }
+}
+
+/* MOBILE FIRST CARD */
 @media screen and (max-width : 768px) {
 
     .with-line {
@@ -388,17 +406,50 @@ li {
         margin-left: 20px;
     }
 
-    #homepage .img-triangle {
-        margin-top: -100px;
-        margin-left: 100px;
-        padding-top: 0;
-        float: right;
+    #homepage .first-card .complex-clouds {
         position: relative;
+
+        /*
+        In mobile mode, the .complex-clouds container collapses because the
+        .img-triangle becomes position: absolute.  We need to expand this
+        container to the image height (453px) plus whatever bottom "padding"
+        */
+        height: 550px;
+
+        top: 0;
+        left: 0;
+        /* min-width: 500px; */
+    }
+
+    #homepage .first-card.fixed .complex-clouds {
+        top: 0;
+        left: 0px;
+        width: 100%;
+        /* min-width: 500px; */
+    }
+
+    #homepage .first-card .img-triangle {
+        position: absolute;
+        top: 70px;
+        right: -140px;
+    }
+}
+
+
+/* XS-FIRST CARD */
+@media screen and (max-width : 460px) {
+    #homepage .first-card .img-triangle {
+        position: absolute;
+        top: 190px;
+        right: -100px;
     }
 }
 
 /* SECOND CARD */
 #homepage .second-card {
+    box-sizing: content-box;
+    padding: 0 0 100px 0;
+
     /* For browsers that do not support gradients */
     background: #f16529;
 
@@ -414,19 +465,54 @@ li {
     z-index: 200;
 }
 
-#homepage .second-card a {
-    margin: 10px 0 30px 20px;
-    color: #f5f7f1;
-    font-weight: bold;
-}
-
 #homepage .second-card.fixed .title-row-secondcard {
     clip: rect(0, 0, 0, 0);
     padding: 0;
+    position: fixed;
+    top: 100px;
+    left: 0;
+
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 #homepage .second-card .title-row-secondcard {
+    position: relative;
     padding: 100px 0 0 0;
+}
+
+#homepage .title-row-secondcard .but-they-dont-have-to-be {
+    margin-bottom: 223px;
+}
+
+#homepage .second-card.fixed .title-row-secondcard .img-cube {
+    position: absolute;
+    top: 215px;
+    right: 258px;
+}
+
+#homepage .second-card .title-row-secondcard .img-cube {
+    width: 241px;
+    height: 276px;
+
+    position: absolute;
+    top: 315px;
+    right: 258px;
+}
+
+#homepage .second-card .title-row-secondcard .img-cube img {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#homepage .second-card .title-row-secondcard img.img-cube-mobile {
+    display: none;
+}
+
+#homepage .second-card .title-row-secondcard img.img-cube-desktop {
+     position: relative;
 }
 
 #homepage .second-card.fixed .text-row-secondcard {
@@ -434,15 +520,26 @@ li {
     transition: all linear 0.5s;
 
     position: absolute;
-    bottom: 55px;
-    left: 15px;
+    bottom: 0;
+    left: 0;
     width: 100%;
 }
 
 #homepage .second-card .text-row-secondcard {
-    padding-top: 200px;
+    padding-top: 0;
+    margin: 0 0 50px 0;
     opacity: 1.0;
     transition: all linear 1s;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+#homepage .second-card a {
+    margin: 10px 0 30px 20px;
+    color: #f5f7f1;
+    font-weight: bold;
 }
 
 #homepage .second-card .text-row-secondcard li.important-item {
@@ -469,40 +566,60 @@ li {
     font-weight: normal;
 }
 
-#homepage .img-cube-mobile {
-        display: none;
-}
-
-#homepage .but-they-dont-have-to-be {
-    margin-bottom: 223px;
-}
- #homepage .img-cube-desktop {
-     position: relative;
-     margin: 0 0 -540px 139px;
-
+/* MEDIUM SECOND CARD */
+@media screen and (max-width : 1024px) {
+    #homepage .second-card.fixed .title-row-secondcard .img-cube {
+        position: absolute;
+        top: 215px;
+        right: 50px;
     }
 
-/*MOBILE SECOND CARD*/
+    #homepage .second-card .title-row-secondcard .img-cube {
+        position: absolute;
+        top: 315px;
+        right: 50px;
+    }
+}
+
+/* MOBILE SECOND CARD */
 @media screen and (max-width : 768px) {
-    #homepage #title-row-secondcard {
-    color: #ec1c23;
-    background-color: #f5f7f1;
-    padding: 100px 0 10px 0;
+    #homepage .second-card {
+        background: #f5f7f1;
+    }
+
+    #homepage .second-card.fixed .title-row-secondcard {
+        top: 0;
+    }
+
+    #homepage .second-card .title-row-secondcard {
+        color: #ec1c23;
+        padding: 0 0 10px 0;
+
+        /*
+        Height won't be properly calculated as .img-cube is
+        position: absolute.  This height is used to offset that problem.
+        */
+        height: 500px;
     }
 
     #homepage .second-card.card-section {
         padding-top: 0;
     }
 
-    #homepage .img-cube-desktop {
+    #homepage .second-card.fixed .title-row-secondcard .img-cube,
+    #homepage .second-card .title-row-secondcard .img-cube {
+        position: absolute;
+        top: 220px;
+        right: -2px;
+    }
+
+    #homepage .second-card .title-row-secondcard img.img-cube-desktop {
         display: none;
     }
 
-    #homepage .img-cube-mobile {
-        margin: 70px 0 30px -20px;
-        float: right;
-        position: relative;
+    #homepage .second-card .title-row-secondcard img.img-cube-mobile {
         display: block;
+
     }
 
     #homepage .second-card .text-row-secondcard {
@@ -514,6 +631,7 @@ li {
         background: -moz-linear-gradient(#f16529, #ec1c23);
         background: linear-gradient(#f16529, #ec1c23);
         padding-top: 70px;
+        padding-bottom: 30px;
     }
 
     #homepage .second-card h4 {
@@ -536,12 +654,24 @@ li {
         text-align: center;
     }
 }
+
+/* XS-SECOND CARD */
+
+@media screen and (max-width : 460px) {
+    #homepage .second-card .title-row-secondcard .img-cube,
+    #homepage .second-card.fixed .title-row-secondcard .img-cube {
+        position: absolute;
+        top: 335px;
+        right: 38px;
+    }
+}
+
 /* THIRD CARD */
 #homepage .features-card {
     background-color: #f5f7f1;
     text-align: center;
     color: #ec1c23;
-
+    padding: 100px 0;
     position: relative;
     z-index: 300;
 }
@@ -580,7 +710,6 @@ li {
     }
 }
 /* CALL TO ACTION CARD */
-/* Inherits backgrouds and link colors from SECOND CARD */
 #homepage .call-to-action-card {
     background: #f16529;
 
@@ -603,10 +732,11 @@ li {
     text-align: center;
     margin-top: auto;
     margin-bottom: auto;
+    color: #fff;
 }
 
 #homepage .call-to-action-card a:link {
-    color: #fff;
+    color: #f5f7f1;
 }
 
 #homepage .call-to-action-card .cta-block {
@@ -621,8 +751,8 @@ li {
     height: 100%;
     border-style: solid;
     border-width: 1px;
-    border-color: white;
-    background-color: white;
+    border-color: #f5f7f1;
+    background-color: #f5f7f1;
     opacity: 0.5;
     border-radius: 1px;
     position: absolute;
@@ -640,6 +770,10 @@ li {
         padding: 0;
     }
 
+    #homepage .call-to-action-card .cta-block {
+        padding: 0;
+    }
+
     #homepage .call-to-action-card::before{
         display: none;
     }
@@ -650,7 +784,7 @@ li {
     #homepage .call-to-action-card .row .col-sm-12::after {
         content: '';
 
-        background: white;
+        background: #f5f7f1;
         width: 50px;
         height: 2px;
         opacity: 0.5;
@@ -697,6 +831,7 @@ li {
 }
 
 #footer.footer.card-section {
+    padding-top: 100px;
      padding-bottom: 20px;
 }
 
@@ -759,6 +894,10 @@ li {
          padding: 40px 10px;
     }
 
+    .footer .social-icons{
+        padding-left: 20px;
+        }
+
     /* Toggle Buttons */
     .footer .toggle-footer::before,
     .footer .toggle-footer::after {
@@ -770,7 +909,7 @@ li {
         opacity: 0.5;
 
         position: absolute;
-        left: 11%;
+        left: 90px;
         transform: translateX(-25px);
 
         border-radius: 25px;
@@ -781,7 +920,7 @@ li {
         min-height: 40px;
         color: #6d6e71;
         font-size: 18px;
-        padding-left: 0;
+        padding-left: 20px;
     }
 
     .footer .toggle-footer .btn.collapse-footer.collapsed {
@@ -821,6 +960,7 @@ li {
         background-color: transparent;
         border: none;
         position: relative;
+        padding-left: 15px;
     }
     .footer #desktop-menu {
         display: none;
