--- a/themes/cca-general/static/fonts/proxima_nova/ProximaNova-LightIt/font.css
+++ b/themes/cca-general/static/fonts/proxima_nova/ProximaNova-LightIt/font.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Proxima Nova';
+  font-family: 'Proxima-Nova';
   src: local('ProximaNova-LightIt'),
        url('ProximaNova-LightIt.woff2') format('woff2'),
        url('ProximaNova-LightIt.woff') format('woff'),
