Second look homepage
modified most of the homepage to match the new look.
The old code rendered irrelevant has yet to be cleaned up
started creating templates for secondary (pricing) page

--- a/themes/cca-general/layouts/partials/homepage/first-card.html
+++ b/themes/cca-general/layouts/partials/homepage/first-card.html
@@ -2,17 +2,34 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 card-title">
-                <h3>Canadian Cloud Services</h3>
-                <h4 class="with-line">For companies that care where their data lives</h4>
+                <h1>Canadian Cloud Services</h1>
+                <h2 class="with-line">For companies that care where their data lives</h2>
             </div>
         </div>
-        <div class="row complex-clouds">
-            <div class="col-lg-4 offset-lg-2 col-sm-8">
-                <h2>Clouds are complex...</h2>
-            </div>
-            <div class="img-triangle">
-                <img src="{{ "images/triangle-blue-card.png" | absURL }}">
+
+        <div class="row different">
+            <div class="col-sm-12">
+                <h3>Cloud.ca is not a hyperscale cloud.
+                Here is how we are different:</h3>
+
+                <div class="row">
+
+                    <div class="col-lg-2 offset-lg-2 col-sm-12">
+                        <img src="{{ "images/elastic-compute.png" | absURL }}">
+                        <p>Canadian-owned with a vested interest in your data security</p>
+                    </div>
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
+                        <img class="img-fluid" src="{{ "images/performant-multi-tenant-storage.png" | absURL }}">
+                        <p>Easy access to a team that supports your business success and unique needs</p>
+                    </div>
+                    <div class="col-lg-2 offset-lg-1 col-sm-12">
+                        <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+                        <p>Flexible offerings and pricing stuctures</p>
+                    </div>
+                </div>
             </div>
         </div>
+
+
     </div>
 </div>
