--- a/themes/cca-general/layouts/partials/homepage/features-card.html
+++ b/themes/cca-general/layouts/partials/homepage/features-card.html
@@ -3,7 +3,7 @@
 
         <div class="row technical-brief">
             <div class="col-sm-12 card-title">
-                <h4>Technical Brief</h4>
+                <h3>Technical Brief</h3>
 
                 <div class="row">
                     <div class="col-lg-2 offset-lg-2 col-sm-12">
@@ -65,6 +65,12 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+
+        <div class="row clouds-are-complex">
+            <div class="col-lg-4 offset-lg-4  col-sm-12">
+                <img class="img-fluid" src="{{ "images/clouds-are-complex.gif" | absURL }}">
             </div>
         </div>
 
