--- a/themes/cca-general/layouts/partials/homepage/intro-card.html
+++ b/themes/cca-general/layouts/partials/homepage/intro-card.html
@@ -1,4 +1,4 @@
-<div class="first-card card-section">
+<div class="intro-card card-section">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 card-title">
@@ -9,13 +9,16 @@
 
         <div class="row different">
             <div class="col-sm-12">
-                <h3>Cloud.ca is not a hyperscale cloud.
-                Here is how we are different:</h3>
+                <h3>
+                    Cloud.ca is not a hyperscale cloud.
+                    <br>
+                    Here is how we are different:
+                </h3>
 
                 <div class="row">
 
                     <div class="col-lg-2 offset-lg-2 col-sm-12">
-                        <img src="{{ "images/elastic-compute.png" | absURL }}">
+                        <img class="img" src="{{ "images/elastic-compute.png" | absURL }}">
                         <p>Canadian-owned with a vested interest in your data security</p>
                     </div>
                     <div class="col-lg-2 offset-lg-1 col-sm-12">
