--- a/themes/cca-general/static-src/less/style.less
+++ b/themes/cca-general/static-src/less/style.less
@@ -69,7 +69,7 @@ li {
 #navbar {
     background-color: transparent;
     text-transform: uppercase;
-    padding: 5px 100px 0 120px;
+    padding: 35px 100px 0 120px;
     font-size: 14px;
     font-family: "Proxima-Nova", sans-serif;
     font-weight: normal;
@@ -80,43 +80,6 @@ li {
 
 #navbar .logo-white {
     margin-top: 5px;
-}
-
-#navbar .logo-red {
-    display: none;
-}
-
-#navbar.scrolled {
-    backface-visibility: visible;
-    /* For browsers that do not support gradients */
-    background: #f5f7f1;
-    background: -webkit-linear-gradient(#f5f7f1, #ccc);
-    background: -o-linear-gradient(#f5f7f1, #ccc);
-    background: -moz-linear-gradient(#f5f7f1, #ccc);
-    background: linear-gradient(#f5f7f1, #ccc);
-    opacity: 0.95;
-}
-
-#navbar.scrolled .logo-red {
-    margin: 5px 0;
-    display: block;
-}
-
-#navbar.scrolled .logo-white {
-    display: none;
-}
-
-#navbar.scrolled a {
-    color: #ec1c23;
-}
-
-#navbar.scrolled .btn {
-    background-color: #ec1c23;
-    color: #f5f7f1;
-}
-
-#navbar.scrolled .navbar-toggler {
-    color: #ec1c23;
 }
 
 #navbar.scroll-hidden {
@@ -312,8 +275,8 @@ li {
     z-index: 990;
 }
 
-/* FIRST CARD */
-#homepage .first-card {
+/* INTRO CARD */
+#homepage .intro-card {
     /* For browsers that do not support gradients */
     background: #ec1c23;
 
@@ -325,21 +288,20 @@ li {
     color: #f5f7f1;
     font-family: "Proxima-Nova", sans-serif;
     position: relative;
-
     padding-bottom: 200px;
 }
 
 
-#homepage .first-card h1 {
+#homepage .intro-card h1 {
     padding-top: 300px;
 }
 
-#homepage .first-card h3 {
+#homepage .intro-card h3 {
     padding: 300px 0 75px;
     text-align: center;
 }
 
-#homepage .first-card p {
+#homepage .intro-card p {
     font-size: 18px;
     font-weight: normal;
     margin-top: 10px;
@@ -349,8 +311,13 @@ li {
     text-align: center;
 }
 
+#homepage .intro-card img {
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
 
-/* MEDIUM FIRST CARD */
+/* MEDIUM INTRO CARD */
 @media screen and (max-width : 1024px) {
     #homepage .first-card .img-triangle {
         position: absolute;
@@ -359,7 +326,7 @@ li {
     }
 }
 
-/* MOBILE FIRST CARD */
+/* MOBILE INTRO CARD */
 @media screen and (max-width : 768px) {
 
     .with-line {
@@ -388,268 +355,10 @@ li {
         font-size: 60px;
         margin-left: 20px;
     }
-
-    #homepage .first-card .complex-clouds {
-        position: relative;
-
-        /*
-        In mobile mode, the .complex-clouds container collapses because the
-        .img-triangle becomes position: absolute.  We need to expand this
-        container to the image height (453px) plus whatever bottom "padding"
-        */
-        height: 550px;
-
-        top: 0;
-        left: 0;
-        /* min-width: 500px; */
-    }
-
-    #homepage .first-card.fixed .complex-clouds {
-        top: 0;
-        left: 0px;
-        width: 100%;
-        /* min-width: 500px; */
-    }
-
-    #homepage .first-card .img-triangle {
-        position: absolute;
-        top: 70px;
-        right: -140px;
-    }
 }
 
 
-/* XS-FIRST CARD */
-@media screen and (max-width : 460px) {
-    #homepage .first-card .img-triangle {
-        position: absolute;
-        top: 190px;
-        right: -100px;
-    }
-}
-
-/* SECOND CARD */
-#homepage .second-card {
-    box-sizing: content-box;
-    padding: 0 0 100px 0;
-
-    /* For browsers that do not support gradients */
-    background: #f16529;
-
-    background: -webkit-linear-gradient(#f16529, #ec1c23);
-    background: -o-linear-gradient(#f16529, #ec1c23);
-    background: -moz-linear-gradient(#f16529, #ec1c23);
-    background: linear-gradient(#f16529, #ec1c23);
-
-    color: #f5f7f1;
-    font-family: "Proxima-Nova", sans-serif;
-
-    position: relative;
-    z-index: 200;
-}
-
-#homepage .second-card.fixed .title-row-secondcard {
-    clip: rect(0, 0, 0, 0);
-    padding: 0;
-    position: fixed;
-    top: 100px;
-    left: 0;
-
-    width: 100%;
-    margin-left: 0;
-    margin-right: 0;
-}
-
-#homepage .second-card .title-row-secondcard {
-    position: relative;
-    padding: 100px 0 0 0;
-}
-
-#homepage .title-row-secondcard .but-they-dont-have-to-be {
-    margin-bottom: 223px;
-}
-
-#homepage .second-card.fixed .title-row-secondcard .img-cube {
-    position: absolute;
-    top: 215px;
-    right: 258px;
-}
-
-#homepage .second-card .title-row-secondcard .img-cube {
-    width: 241px;
-    height: 276px;
-
-    position: absolute;
-    top: 315px;
-    right: 258px;
-}
-
-#homepage .second-card .title-row-secondcard .img-cube img {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-#homepage .second-card .title-row-secondcard img.img-cube-mobile {
-    display: none;
-}
-
-#homepage .second-card .title-row-secondcard img.img-cube-desktop {
-     position: relative;
-}
-
-#homepage .second-card.fixed .text-row-secondcard {
-    opacity: 0;
-    transition: all linear 0.5s;
-
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
-#homepage .second-card .text-row-secondcard {
-    padding-top: 0;
-    margin: 0 0 50px 0;
-    opacity: 1.0;
-    transition: all linear 1s;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}
-
-#homepage .second-card a {
-    margin: 10px 0 30px 20px;
-    color: #f5f7f1;
-    font-weight: bold;
-}
-
-#homepage .second-card .text-row-secondcard li.important-item {
-    font-weight: bold;
-}
-
-#homepage .second-card .text-row-secondcard h4 {
-    font-size: 30px;
-    font-weight: normal;
-}
-
-#homepage .second-card .text-row-secondcard ul {
-    padding: 0;
-    margin: 20px 0 0 20px;
-}
-#homepage .second-card .text-row-secondcard li {
-    font-size: 18px;
-    font-weight: normal;
-}
-
-#homepage .second-card .text-row-secondcard p {
-    margin: 20px 0 0 20px;
-    font-size: 18px;
-    font-weight: normal;
-}
-
-/* MEDIUM SECOND CARD */
-@media screen and (max-width : 1024px) {
-    #homepage .second-card.fixed .title-row-secondcard .img-cube {
-        position: absolute;
-        top: 215px;
-        right: 50px;
-    }
-
-    #homepage .second-card .title-row-secondcard .img-cube {
-        position: absolute;
-        top: 315px;
-        right: 50px;
-    }
-}
-
-/* MOBILE SECOND CARD */
-@media screen and (max-width : 768px) {
-    #homepage .second-card {
-        background: #f5f7f1;
-    }
-
-    #homepage .second-card.fixed .title-row-secondcard {
-        top: 0;
-    }
-
-    #homepage .second-card .title-row-secondcard {
-        color: #ec1c23;
-        padding: 0 0 10px 0;
-
-        /*
-        Height won't be properly calculated as .img-cube is
-        position: absolute.  This height is used to offset that problem.
-        */
-        height: 500px;
-    }
-
-    #homepage .second-card.card-section {
-        padding-top: 0;
-    }
-
-    #homepage .second-card.fixed .title-row-secondcard .img-cube,
-    #homepage .second-card .title-row-secondcard .img-cube {
-        position: absolute;
-        top: 220px;
-        right: -2px;
-    }
-
-    #homepage .second-card .title-row-secondcard img.img-cube-desktop {
-        display: none;
-    }
-
-    #homepage .second-card .title-row-secondcard img.img-cube-mobile {
-        display: block;
-
-    }
-
-    #homepage .second-card .text-row-secondcard {
-    /* For browsers that do not support gradients */
-        background: #f16529;
-
-        background: -webkit-linear-gradient(#f16529, #ec1c23);
-        background: -o-linear-gradient(#f16529, #ec1c23);
-        background: -moz-linear-gradient(#f16529, #ec1c23);
-        background: linear-gradient(#f16529, #ec1c23);
-        padding-top: 70px;
-        padding-bottom: 30px;
-    }
-
-    #homepage .second-card h4 {
-        margin: 5px;
-        text-align: center;
-        font-size: 30px;
-        color: #f5f7f1;
-        font-weight: 500;
-        line-height: 1.5;
-    }
-
-    #homepage .second-card li, p, a {
-        margin: 5px;
-        font-size: 24px;
-        text-align: center;
-    }
-
-    #homepage .second-card .learn-more-second-card {
-        padding-top: 10px;
-        text-align: center;
-    }
-}
-
-/* XS-SECOND CARD */
-
-@media screen and (max-width : 460px) {
-    #homepage .second-card .title-row-secondcard .img-cube,
-    #homepage .second-card.fixed .title-row-secondcard .img-cube {
-        position: absolute;
-        top: 335px;
-        right: 38px;
-    }
-}
-
-/* THIRD CARD */
+/* FEATURES CARD */
 #homepage .features-card {
     background-color: #fff;
     text-align: center;
@@ -674,7 +383,7 @@ li {
 }
 
 
-/*MOBILE THIRD CARD*/
+/*MOBILE FEATURES CARD*/
 @media screen and (max-width : 768px) {
 
     #homepage .features-card h3 {
