changed p color in feature card

--- a/themes/cca-general/static-src/less/style.less
+++ b/themes/cca-general/static-src/less/style.less
@@ -374,7 +374,7 @@ margin-right: auto;
 #homepage .features-card p {
     font-size: 18px;
     margin-top: 10px;
-    color: #ccc;
+    color: #6d6e71;
 }
 
 #homepage .features-card .text-row-features-card h4 {
