--- a/themes/cca-general/layouts/index.html
+++ b/themes/cca-general/layouts/index.html
@@ -7,7 +7,7 @@
 
         {{ partial "navbar.html" }}
 
-        {{ partial "homepage/first-card.html" }}
+        {{ partial "homepage/intro-card.html" }}
         {{ partial "homepage/features-card.html" }}
         {{ partial "homepage/call-to-action-card.html" }}
 
