fixing the baseof links

--- a/themes/cca-general/layouts/_default/baseof.html
+++ b/themes/cca-general/layouts/_default/baseof.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         {{ partial "navbar" . }}
-        {{ partial "title-card" . }}
-        {{ partial "content-card" . }}
-        {{ partial "services-card" . }}
+        {{ partial "pricing/title-card" . }}
+        {{ partial "pricing/content-card" . }}
+        {{ partial "pricing/services-card" . }}
         {{partial "footer" . }}
     </body>
 </html>
