First upload - most content, no styling

--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -1,1 +1,238 @@
-services!
+
+
+<div class="services-card">
+
+    <div class="row">
+        <div class="col-lg-5 offset-lg-1 col-sm-12">
+                <h3>Networing</h3>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>PUBLIC IPS</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>$0.50 CAD / GBMonthly</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>INTERNAL DATA TRANSFER</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>Included</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>INBOUND DATA TRANSFER</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>Included</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>OUTBOUND DATA TRANSFER</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>$0.10 CAD / GB</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>INTER-REGION DATA TRANSFER</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>$0.02 CAD / GB</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>DIRECT CONNECT DATA TRANSFER</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>$0.02 CAD / GB</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>MULTI-TIER VPC</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>Included</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>LOAD BALANCING (BASIC)</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>Included</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>LOAD BALANCING (ENTERPRISE)</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>Contact us for details</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <p>FIREWALL (ENTERPRISE)</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6">
+                            <p>Contact us for details</p>
+                        </div>
+                    </div>
+                </div>
+
+        <div class="col-lg-4 offset-lg-1 col-sm-12">
+            <div class="row">
+                <div class="col-lg-12 col-sm-12">
+                    <h3> Licenses</h3>
+                    <p>– Bring your own OS* and software licenses.</p>
+                    <p>– Certain licences available through Microsoft SPLA partner program.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-11 offset-lg-1 col-sm-11 offset-sm-11">
+                    <p>*Microsoft clients who meet the criteria are eligible for License Mobility through Microsoft Software Assurance.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12">
+                    <h3> Term discounts</h3>
+                    <p>10-30% discount on committed compute capacity for 1, 2, or 3 year term. Contact us for details.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-3">
+                    <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                </div>
+                <div class="col-lg-4 col-sm-3">
+                    <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-lg-6 offset-lg-1 col-sm-12">
+        <h5> Call us at 1-888-796-8364 to speak to a specialist today or fill out the form below: </h5>
+    </div>
+
+    <div class="container-fluid">
+        <form>
+                <div class="row">
+                    <div class="col-lg-3 offset-lg-1 col-sm-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control form-control-lg" id="Form-First-Name" placeholder="First name">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-12">
+                        <div class="form-group">
+                            <input type="text" class="form-control form-control-lg" id="Form-Last-Name" placeholder="Last Name">
+                        </div>
+                    </div>
+                </div>
+            <div class="row">
+                <div class="col-lg-3 offset-lg-1 col-sm-12">
+                    <div class="form-group">
+                      <input type="text" class="form-control form-control-lg" id="Form-Company-Name" placeholder="Company Name">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-sm-12">
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" id="Form-Origin-Country">
+                            <option>Country &#40;please select&#41;</option>
+                            <option>Canada</option>
+                            <option>USA</option>
+                            <option>China</option>
+                            <option>Germany</option>
+                            <option>Mexico</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-1 col-sm-12">
+                    <div class="form-group">
+                      <input type="tel" class="form-control form-control-lg" id="Form-Phone-Number" placeholder="333-333-3333">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-1 col-sm-12">
+                    <div class="form-group">
+                      <input type="email" class="form-control form-control-lg" id="Form-Email" placeholder="name@example.com">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-1 col-sm-12">
+                    <div class="form-group">
+                        <textarea class="form-control form-control-lg" id="Form-Requirements" rows="3" placeholder="What are your requirements or specific questions?"></textarea>
+                    </div>
+                </div>
+            </div>
+        </form>
+
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-1 offset-lg-1 col-sm-12">
+                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                Services
+
+                Text text text
+            </div>
+            <div class="col-lg-1 offset-lg-1 col-sm-12">
+                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                Services
+
+                Text text text
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-1 offset-lg-1 col-sm-12">
+                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                Services
+
+                Text text text
+            </div>
+            <div class="col-lg-1 offset-lg-1 col-sm-12">
+                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                Services
+
+                Text text text
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-1 offset-lg-1 col-sm-12">
+                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                Services
+
+                Text text text
+            </div>
+            <div class="col-lg-1 offset-lg-1 col-sm-12">
+                <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                Services
+
+                Text text text
+            </div>
+        </div>
+    </div>
+</div>
