--- a/themes/cca-general/static-src/less/style.less
+++ b/themes/cca-general/static-src/less/style.less
@@ -662,3 +662,53 @@ margin-right: auto;
         margin: 150px 0 20px;
     }
 }
+
+
+/* SECONDARY PAGES -- TEMPLATES */
+
+.title-card {
+    /* For browsers that do not support gradients */
+    background: #f16529;
+
+    background: -webkit-linear-gradient(#f16529, #ec1c23);
+    background: -o-linear-gradient(#f16529, #ec1c23);
+    background: -moz-linear-gradient(#f16529, #ec1c23);
+    background: linear-gradient(#f16529, #ec1c23);
+
+    padding: 180px 0 80px;
+    }
+
+.title-card h1 {
+    color: #f5f7f1;
+    font-weight: lighter;
+    font-size: 48px;
+    text-align: center;
+    font-family: "Proxima-Nova", sans-serif;
+}
+
+.content-main-nav {
+    background-color: #fff;
+}
+
+.content-secondary-nav {
+        /* For browsers that do not support gradients */
+        background: #f5f7f1;
+
+        background: -webkit-linear-gradient( to right, #f5f7f1, #ccc);
+        background: -o-linear-gradient(to right, #f5f7f1, #ccc);
+        background: -moz-linear-gradient(to right, #f5f7f1, #ccc);
+        background: linear-gradient(to right, #f5f7f1, #ccc);
+    }
+
+
+    .services-card {
+        /* For browsers that do not support gradients */
+        background: #ec1c23;
+
+        background: -webkit-linear-gradient(#ec1c23, #1d2671);
+        background: -o-linear-gradient(#ec1c23, #1d2671);
+        background: -moz-linear-gradient(#ec1c23, #1d2671);
+        background: linear-gradient(#ec1c23, #1d2671);
+
+        padding: 180px 0 80px;
+        }
