--- a/themes/cca-general/layouts/partials/Pricing/title-card.html
+++ b/themes/cca-general/layouts/partials/Pricing/title-card.html
@@ -1,2 +1,9 @@
-<h1> PLEASE WORK </h1>
-    {{ .Content }}
+<div class="title-card">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-sm-12">
+                <h1> {{ .Content }} </h1>
+            </div>
+        </div>
+    </div>
+</div>
