--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -1,1 +1,67 @@
-<p> content </p>
+<nav class="navbar navbar-expand-lg content-main-nav">
+
+  <div class="collapse navbar-collapse d-flex justify-content-center">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">A <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">B</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">C</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">D</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">E</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<nav class="navbar navbar-expand-lg content-secondary-nav">
+  <div class="collapse navbar-collapse d-flex justify-content-center">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">1<span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">2</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">3</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">4</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="content-card card-section">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-5 offset-lg-1 col-md-5 offset-md-1 col-sm-12">
+                <h1>Lesson 1</h1>
+                <h2>Our infrastructure bla bla bla</h2>
+                <p> TEXT TEXT TEXT</p>
+                <a href="#">Next lesson</a>
+                <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                <a class="btn btn-primary" href="#" role="button">Special offers</a>
+                <a class="btn btn-primary" href="#" role="button">Special offers</a>
+            </div>
+            <div class="col-lg-5 col-md-5 col-sm-12">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe
+                        width="560" height="315"
+                        src="https://www.youtube.com/embed/Oe3FG4EOgyU"
+                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
