Content all on page

--- a/themes/cca-general/layouts/partials/pricing/services-card.html
+++ b/themes/cca-general/layouts/partials/pricing/services-card.html
@@ -2,90 +2,128 @@
 
 <div class="services-card">
 
+
+    <div class="row">
+        <div class="col-lg-11 offset-lg-1 col-sm-12">
+            <h3>Compute</h3>
+        </div>
+        <div class="col-lg-11 offset-lg-1 col-sm-12">
+            <div class="row">
+                <div class="col-lg-2 col-sm-12">
+                    <p>$108 Monthly</p>
+                    <p>2 VCPU / 8 GB RAM</p>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <p>$144 Monthly</p>
+                    <p>2 VCPU / 8 GB RAM</p>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <p>$216 Monthly</p>
+                    <p>4 VCPU / 16 GB RAM</p>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <p>$360 Monthly</p>
+                    <p>32 VCPU / 4 GB RAM</p>
+                </div>
+                <div class="col-lg-2 col-sm-12">
+                    <p>$684 Monthly</p>
+                    <p>8 VCPU / 60GB RAM</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 offset-lg-7 col-sm-12">
+            <p>Other compute offerings are available.
+                <a href="#">Contact us</a>
+                 for details.</p>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="col-lg-11 offset-lg-1 col-sm-12">
+            <h3>Storage</h3>
+        </div>
+        <div class="col-lg-7 offset-lg-1 col-sm-12">
+            <h6>HIGH PERFORMANCE BLOCK STORAGE—HIGHLY AVAILABLE SSD</h6>
+            <div class="row">
+                <div class="col-lg-4 col-sm-12">
+                    <p>$0.25 CAD / GBMonthly</p>
+                    <p>1 IOPS/GB*</p>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <p>$0.50 CAD / GBMonthly</p>
+                    <p>5 IOPS/GB*</p>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <p>$0.75 CAD / GBMonthly</p>
+                    <p>10 IOPS/GB*</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+            <h6>OBJECT STORAGE—3 REPLICAS</h6>
+            <div class="row">
+                <div class="col-lg-12 col-sm-12">
+                    <p>$0.05 CAD / GBMonthly</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 offset-lg-7 col-sm-12">
+            <p>*Minimum guaranteed IOPS. Additional performance tiers available, <a href="#">contact us</a> for details.</p>
+        </div>
+    </div>
+
+
+
+
     <div class="row">
         <div class="col-lg-5 offset-lg-1 col-sm-12">
-                <h3>Networing</h3>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>PUBLIC IPS</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>$0.50 CAD / GBMonthly</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>INTERNAL DATA TRANSFER</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>Included</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>INBOUND DATA TRANSFER</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>Included</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>OUTBOUND DATA TRANSFER</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>$0.10 CAD / GB</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>INTER-REGION DATA TRANSFER</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>$0.02 CAD / GB</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>DIRECT CONNECT DATA TRANSFER</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>$0.02 CAD / GB</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>MULTI-TIER VPC</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>Included</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>LOAD BALANCING (BASIC)</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>Included</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>LOAD BALANCING (ENTERPRISE)</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>Contact us for details</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                            <p>FIREWALL (ENTERPRISE)</p>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                            <p>Contact us for details</p>
-                        </div>
-                    </div>
-                </div>
+            <h3>Networing</h3>
+            <table class="table table-striped">
+
+                <tbody>
+                    <tr>
+                        <td>PUBLIC IPS</td>
+                        <td>$0.50 CAD / GBMonthly</td>
+                    </tr>
+                    <tr>
+                        <td>INTERNAL DATA TRANSFER</td>
+                        <td>Included</td>
+                    </tr>
+                    <tr>
+                        <td>INBOUND DATA TRANSFER</td>
+                        <td>Included</td>
+                    </tr>
+                        <td>OUTBOUND DATA TRANSFER</td>
+                        <td>$0.10 CAD / GB</td>
+                    </tr>
+                    <tr>
+                        <td>INTER-REGION DATA TRANSFER</td>
+                        <td>$0.02 CAD / GB</td>
+                    </tr>
+                    <tr>
+                        <td>DIRECT CONNECT DATA TRANSFER</td>
+                        <td>$0.02 CAD / GB</td>
+                    </tr>
+                        <td>MULTI-TIER VPC</td>
+                        <td>Included</td>
+                    </tr>
+                    <tr>
+                        <td>LOAD BALANCING (BASIC)</td>
+                        <td>Included</td>
+                    </tr>
+                    <tr>
+                        <td>LOAD BALANCING (ENTERPRISE)</td>
+                        <td>Contact us for details</td>
+                    </tr>
+                    <tr>
+                        <td>FIREWALL (ENTERPRISE))</td>
+                        <td>Contact us for details</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <div class="col-lg-4 offset-lg-1 col-sm-12">
             <div class="row">
