homepage ready for review

--- a/themes/cca-general/layouts/partials/homepage/intro-card.html
+++ b/themes/cca-general/layouts/partials/homepage/intro-card.html
@@ -18,15 +18,15 @@
                 <div class="row">
 
                     <div class="col-lg-2 offset-lg-2 col-sm-12">
-                        <img class="img" src="{{ "images/elastic-compute.png" | absURL }}">
+                        <img class="img canadian-owned" src="{{ "images/canadian-owned.png" | absURL }}">
                         <p>Canadian-owned with a vested interest in your data security</p>
                     </div>
                     <div class="col-lg-2 offset-lg-1 col-sm-12">
-                        <img class="img-fluid" src="{{ "images/performant-multi-tenant-storage.png" | absURL }}">
+                        <img class="img-fluid easy-access" src="{{ "images/easy-access.png" | absURL }}">
                         <p>Easy access to a team that supports your business success and unique needs</p>
                     </div>
                     <div class="col-lg-2 offset-lg-1 col-sm-12">
-                        <img class="img-fluid" src="{{ "images/multi-tiered-networking.png" | absURL }}">
+                        <img class="img-fluid flexible-offerings" src="{{ "images/flexible-offerings.png" | absURL }}">
                         <p>Flexible offerings and pricing stuctures</p>
                     </div>
                 </div>
