--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -3,38 +3,35 @@
   <div class="collapse navbar-collapse d-flex justify-content-center">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">A <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">get support<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">B</a>
+        <a class="nav-link" href="#">sla</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">C</a>
+        <a class="nav-link" href="#">certifications</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">D</a>
+        <a class="nav-link" href="#">status</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">E</a>
+        <a class="nav-link" href="#">knowledge base</a>
       </li>
     </ul>
   </div>
 </nav>
 
 <nav class="navbar navbar-expand-lg content-secondary-nav">
-  <div class="collapse navbar-collapse d-flex justify-content-center">
+  <div class="collapse navbar-collapse d-flex">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">1<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">lesson 1<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">2</a>
+        <a class="nav-link" href="#">lesson 2</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">3</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">4</a>
+        <a class="nav-link" href="#">lesson 3</a>
       </li>
     </ul>
   </div>
