latest version with pricing name fixed

--- a/themes/cca-general/layouts/partials/pricing/content-card.html
+++ b/themes/cca-general/layouts/partials/pricing/content-card.html
@@ -40,17 +40,27 @@
 <div class="content-card card-section">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-5 offset-lg-1 col-md-5 offset-md-1 col-sm-12">
+            <div class="col-lg-4 offset-lg-1 offset-md-1 col-sm-12">
                 <h1>Lesson 1</h1>
-                <h2>Our infrastructure bla bla bla</h2>
-                <p> TEXT TEXT TEXT</p>
+                <h2>Our Infrastructure as a Service (IaaS) is purpose built for:</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    sed diam nonummy nibh euismod tincidunt ut laoreet dolorez
+                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                     ut aliquip ex ea commodo consequat.
+                    Duis autem vel eum iriure dolor in hendrerit in vulputate
+                    velit esse molestie consequat, vel illum dolore eu feugiat
+                    nulla facilisis at vero eros et accumsan et iusto odio
+                    dignissim qui blandit.
+                </p>
                 <a href="#">Next lesson</a>
                 <a class="btn btn-primary" href="#" role="button">Special offers</a>
                 <a class="btn btn-primary" href="#" role="button">Special offers</a>
                 <a class="btn btn-primary" href="#" role="button">Special offers</a>
                 <a class="btn btn-primary" href="#" role="button">Special offers</a>
             </div>
-            <div class="col-lg-5 col-md-5 col-sm-12">
+            <div class="col-lg-6 col-sm-12">
                 <div class="embed-responsive embed-responsive-16by9">
                     <iframe
                         width="560" height="315"
