--- a/themes/cca-general/static-src/less/style.less
+++ b/themes/cca-general/static-src/less/style.less
@@ -770,12 +770,15 @@ margin-right: auto;
     color: #6d6e71;
     font-size: 13px;
     font-weight: 600;
-
 }
 
+.content-card h2 {
+    color: #ec1c23;
+}
 
-
-
+.content-card p {
+    color: #6d6e71;
+}
 
 
 .services-card {
